serviceback.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: furweb
  ports:
  - name: http
    port: 80
    targetPort: 5000
  type: LoadBalancer
