serviceffront.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: furweb
  ports:
  - name: http
    port: 80
    targetPort: 3000
  type: LoadBalancer
